# wispers-client

./: .gitignore  .gitmodules  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Package.swift  README.md  SECURITY_REVIEW_v0.8.0.md  TODO.md  alt-key.txt  cargo_build.sh  flake.nix
.github/workflows/: build-go-libs.yml  ci.yml  publish-python.yml
docs/: HOW_IT_WORKS.md  HOW_TO_USE.md
examples/c/: ffi_demo.c
examples/go/: .gitignore  main.go
examples/kotlin/: build.gradle.kts
proto/: hub.proto  roster.proto
scripts/: build-release-artifacts.sh  bump-version.sh
wcadm/: Cargo.toml
wcadm/src/: main.rs
wconnect/: Cargo.toml  TODO.md
wconnect/src/: daemon.rs  main.rs  p2p.rs  proxy_common.rs  proxy_http.rs  proxy_socks.rs  serving.rs
wispers-connect/: Cargo.toml  build.rs
wispers-connect/examples/: Makefile  ffi_demo.c  ffi_test.c
wispers-connect/include/: wispers_connect.h
wispers-connect/src/: crypto.rs  errors.rs  hub.rs  ice.rs  juice.rs  lib.rs  node.rs  p2p.rs  p2p_signing.rs  quic.rs  roster.rs  serving.rs  state.rs  types.rs
wispers-connect/src/ffi/: callbacks.rs  handles.rs  helpers.rs  manager.rs  mod.rs  node.rs  nodes.rs  p2p.rs  runtime.rs  serving.rs  types.rs
wispers-connect/src/storage/: codec.rs  file.rs  foreign.rs  in_memory.rs  mod.rs
wispers-connect/tests/: p2p_integration.rs
wispers-connect/tests/common/: mod.rs
wrappers/go/: errors.go  node.go  shims.go  storage.go  wispers.go  wispers_helpers.h  wispers_test.go
wrappers/kotlin/: build.gradle.kts
wrappers/python/: Makefile  pyproject.toml
(+25 files in other folders)
