[package]
name = "wispers-connect"
version = "0.1.0"
edition = "2024"
description = "Client library for Wispers Connect"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
bincode = "1.3"
dirs = "5"
http = "1"
prost = "0.13"
rand = { version = "0.8", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["rt-multi-thread"] }
tonic = "0.12"
urlencoding = "2.1"
zeroize = "1.8"

[build-dependencies]
tonic-build = "0.12"
